# rs-matter-idl-parser

./: .gitignore  Cargo.toml  coverage.sh
benches/: client-clusters-criterion.rs  client-clusters.rs
examples/: file_parser.rs
src/: lib.rs
