[package]
name = "rs-matter-idl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = "0.1.4"
miette = {version="5.10.0", features=["fancy"]}
nom = "7.1.3"
nom_locate = "4.2.0"
thiserror = "1.0.50"

[[bench]]
name="client-clusters"
harness=false
