[package]
name = "rs-matter-idl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
miette = {version="5.10.0", features=["fancy"]}
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
thiserror = "1.0.50"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
divan = "0.1.4"
rstest = "0.18.2"

[[bench]]
name="client-clusters"
harness=false

[[bench]]
name = "client-clusters-criterion"
harness = false

[profile.flamegraph]
inherits = "release"
debug = true
